--- a/emailtemp2.html
+++ b/emailtemp2.html
@@ -292,7 +292,7 @@
                                             <!-- horizontal spacing/background color -->
                                             <th class="m-pad-lr--20" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly; background-color: #000000;">
                                                 <!-- h1/paragraph/h3 -->
-                                                <h1 class="m-text--h1" style="padding: 0px; margin: 0px; font-family: 'Roboto', Arial, sans-serif; font-size: 32px; font-weight: 700; color: #ffffff; mso-line-height-alt: 32px; line-height: 1.0; letter-spacing: normal; text-align: center;">Epic <span style=" color: #04D9FF;">Loot Drops</span> Await You!</h1>
+                                                <h1 class="m-text--h1" style="padding: 0px; margin: 0px; font-family: 'Roboto', Arial, sans-serif; font-size: 30px; font-weight: 700; color: #ffffff; mso-line-height-alt: 32px; line-height: 1.0; letter-spacing: normal; text-align: center;">Epic <span style=" color: #04D9FF;">loot drops</span> await you!</h1>
                                                 <p class="m-text--p" style="padding: 10px 40px; margin: 0px; margin-top: 0px; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: 400; color: #ffffff; mso-line-height-alt: 23px; line-height: 1.4; letter-spacing: normal; text-align: center;"> We have the PC gaming accessories you want at prices that you'll love.</p>
                                               
                                              
@@ -305,7 +305,7 @@
                              <!-- ## START: MODULE - 2up (image/title/text/link/button) ## -->
                              <tr>
                                 <!-- vertical spacing from prior module -->
-                                <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 40px; mso-line-height-rule: exactly; background-color: #000000;">
+                                <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 30px; mso-line-height-rule: exactly; background-color: #000000;">
                                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
                                         <tr>
                                             <!-- horizontal spacing/background color/border -->
