--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <!-- Intro Paragraph-->
-<div class="fx-row-padding fx-padding-top-24 fx-container fx-center">
+<div class="fx-row-padding fx-padding-top-48 fx-container fx-center">
   <div class="fx-content">
     <div>
         <h1 class="fx-font-64 fx-bold">Hola! I'm Felix.</h1>
@@ -52,9 +52,9 @@
 
 
 <!-- Example of Work -->
-<div class="fx-row-padding fx-padding-16 fx-padding-top-60 fx-container fx-center  fx-padding-lr-100">
+<div class="fx-row-padding fx-padding-24 fx-container fx-center fx-padding-lr-100">
     <div class="fx-content">
-      <div style="padding: 60px 0px 0px 0px;">
+      <div>
         <h1><strong>PORTFOLIO</strong></h1>
               <!-- Icon Divider-->
               <div class="divider-custom">
@@ -73,7 +73,7 @@
   <!-- START: First Row of My Work -->
   <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-100"> 
 
-    <div class="fx-quarter fx-margin-top-20">
+    <div class="fx-quarter fx-margin-top-20 fx-padding-bottom-100">
     <div class="">
         <a style="text-decoration: none !important" href="https://felixzavala.com/emailtemp2.html" target="_blank"> <img src="http://felixzavala.com/img/GameStoreEmailPreview1.png" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
             <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive Email
@@ -119,7 +119,7 @@
 
 
 <!-- Footer -->
-<footer class="fx-container fx-padding-24 fx-center fx-mainblue " >  
+<footer class="fx-container fx-padding-24 fx-padding-top-80 fx-center fx-black " >  
   <div class="fx-xxlarge " style="padding: 0px 100px;">
     <a href="https://www.youtube.com/@felix_codes"> <i class="fa fa-youtube-play fx-hover-opacity"></i></a>&nbsp;&nbsp;&nbsp;
     <a href="https://www.linkedin.com/in/felix-zavala-8a8266231/"><i class="fa fa-linkedin fx-hover-opacity"></i></a>&nbsp;&nbsp;&nbsp;
