--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="fx-row-padding fx-container fx-center fx-padding-bottom-48" style="padding-bottom: 0px;">
   <div class="fx-content">
     <div>
-      <img class="" src="/img/fx_headshot_avatar.png" alt="Avatar of Felix" width="240" height="auto">
+      <img class="" src="/img/fx_headshot_avatar.png" alt="Avatar of Felix" width="228" height="auto">
     </div>
 
  
@@ -36,7 +36,7 @@
 </div>
 
 <!-- Intro Paragraph-->
-<div class="fx-row-padding fx-padding-top-48 fx-container fx-center">
+<div class="fx-row-padding fx-container fx-center">
   <div class="fx-content">
     <div>
         <h1 class="fx-font-64 fx-bold">Hola! I'm Felix.</h1>
@@ -125,7 +125,7 @@
     <a href="https://www.linkedin.com/in/felix-zavala-8a8266231/"><i class="fa fa-linkedin fx-hover-opacity"></i></a>&nbsp;&nbsp;&nbsp;
     <a href="mailto:jfelixzavala10@gmail.com"><i class="fa fa-envelope fx-hover-opacity"></i></a>
  </div>
- <p>FelixZavala.com <br> &copy; 2019-2024</p>
+ <p>Copyright &copy; 2019-2024</p>
 </footer>
 
 
