--- a/HelpCo.html
+++ b/HelpCo.html
@@ -253,7 +253,7 @@
                                                                                         <table class="m-width--100p m-float--center" width="" align="left" role="presentation" border="0" cellpadding="0" cellspacing="0" style="margin: 0px auto;">
                                                                                             <tr>
                                                                                                 <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
-                                                                                                    <a class="" href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="/img/HelpCo.png" border="0" style="display: block; margin: 0px auto; max-width: 150px;" width="150" height="" alt="AltTextHere"></a>
+                                                                                                    <a class="" href="#" target="_blank" style="" name="Header_LogoName_image" alias="Header_LogoName_image"><img class="m-width--100p" src="https://felixzavala.com/img/HelpCo.png" border="0" style="display: block; margin: 0px auto; max-width: 150px;" width="150" height="" alt="AltTextHere"></a>
                                                                                                  </td>
                                                                                             </tr>
                                                                                         </table>
@@ -321,11 +321,11 @@
                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
                         <tr>
                             <!-- background image -->
-                            <td class="m-width--100p m-height--auto dm-background--222222" width="600" height="600" align="center" border="0" bgcolor="#FFFFFF" background="/img/HeroImage1.jpg" style="width: 600px; height: 600px; padding: 0px; mso-line-height-rule: exactly; background: url(/img/HeroImage1.jpg); background-position: top center; background-size: 100%; background-repeat: no-repeat; background-color: #FFFFFF; vertical-align: bottom; ">
+                            <td class="m-width--100p m-height--auto dm-background--222222" width="600" height="600" align="center" border="0" bgcolor="#FFFFFF" background="/img/HeroImage1.jpg" style="width: 600px; height: 600px; padding: 0px; mso-line-height-rule: exactly; background: url(https://felixzavala.com/img/HeroImage1.jpg); background-position: top center; background-size: 100%; background-repeat: no-repeat; background-color: #FFFFFF; vertical-align: bottom; ">
                                 <!-- Outlook: 1pt = 1px * 0.75 -->
                                 <!-- For this type of module, v:image height = height of bg image (400px/300pt) and v:rect height = height of entire container (600px/450pt) -->
                                 <!--[if gte mso 9]>
-                                    <v:image xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="border: 0; display: inline-block; width: 450pt; height: 300pt;" src="/img/HeroImage1.jpg" />
+                                    <v:image xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="border: 0; display: inline-block; width: 450pt; height: 300pt;" src="https://felixzavala.com/img/HeroImage1.jpg" />
                                     <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="border: 0; display: inline-block; position: absolute; width: 450pt; height: 300pt; v-text-anchor: top;">
                                     <v:fill opacity="0%" color="#FFFFFF" />
                                     <v:textbox style="v-text-align: top;" inset="0,0,0,0">
@@ -416,7 +416,7 @@
                                                                                 <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
                                                                                     <!-- image -->
                                                                                     <tr>
-                                                                                        <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="/img/MedicalVolunteer.jpg" border="0" style="display: block; margin: 0px auto; max-width: 400px;" width="200" height="" alt="AltTextHere"></a>
+                                                                                        <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="https://felixzavala.com/img/MedicalVolunteer.jpg" border="0" style="display: block; margin: 0px auto; max-width: 400px;" width="200" height="" alt="AltTextHere"></a>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -486,7 +486,7 @@
                                                                                 <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
                                                                                     <!-- image -->
                                                                                     <tr>
-                                                                                        <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="/img/Untitled-1.jpg" border="0" style="display: block; margin: 0px auto; max-width: 400px;" width="200" height="" alt="AltTextHere"></a>
+                                                                                        <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="https://felixzavala.com/img/Untitled-1.jpg" border="0" style="display: block; margin: 0px auto; max-width: 400px;" width="200" height="" alt="AltTextHere"></a>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -556,7 +556,7 @@
                                                                                 <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
                                                                                     <!-- image -->
                                                                                     <tr>
-                                                                                        <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="/img/i2.jpg" border="0" style="display: block; margin: 0px auto; max-width: 400px;" width="200" height="" alt="AltTextHere"></a>
+                                                                                        <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="https://felixzavala.com/img/i2.jpg" border="0" style="display: block; margin: 0px auto; max-width: 400px;" width="200" height="" alt="AltTextHere"></a>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
