--- a/HelpCo.html
+++ b/HelpCo.html
@@ -806,7 +806,7 @@
                                                         <table class="m-float--center" width="" align="right" border="0" cellpadding="0" cellspacing="0" role="presentation" style="margin: 0px auto; float: right; ">
                                                             <tr>
                                                                 <th width="100%" align="center" border="0" style="padding: 0px; width: 100%; mso-line-height-rule: exactly" class="">
-                                                                    <p style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: 700; letter-spacing: normal; line-height: 1.5; margin: 0px; text-align: center; mso-line-height-alt: 21px; " class="hoverLink1 m-text--link"><a href="https://www.whereoware.com" target="_blank" style="color: #ef1b00; font-weight: 700; text-decoration: none; " name="LinkName_link" class=""><span style="border-bottom: 2px solid #ef1b00; " class="outlook-textDecoration--underline">Learn More</span></a></p>
+                                                                    <p style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: 700; letter-spacing: normal; line-height: 1.5; margin: 0px; text-align: center; mso-line-height-alt: 21px; " class="hoverLink1 m-text--link"><a href="#" target="_blank" style="color: #ef1b00; font-weight: 700; text-decoration: none; " name="LinkName_link" class=""><span style="border-bottom: 2px solid #ef1b00; " class="outlook-textDecoration--underline">Learn More</span></a></p>
                                                                 </th>
                                                             </tr>
                                                         </table>
@@ -879,7 +879,7 @@
                                                         <table class="m-float--center" width="" align="right" border="0" cellpadding="0" cellspacing="0" role="presentation" style="margin: 0px auto; float: right; ">
                                                             <tr>
                                                                 <th width="100%" align="center" border="0" style="padding: 0px; width: 100%; mso-line-height-rule: exactly" class="">
-                                                                    <p style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: 700; letter-spacing: normal; line-height: 1.5; margin: 0px; text-align: center; mso-line-height-alt: 21px; " class="hoverLink1 m-text--link"><a href="https://www.whereoware.com" target="_blank" style="color: #ef1b00; font-weight: 700; text-decoration: none; " name="LinkName_link" class=""><span style="border-bottom: 2px solid #ef1b00; " class="outlook-textDecoration--underline">Learn More</span></a></p>
+                                                                    <p style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: 700; letter-spacing: normal; line-height: 1.5; margin: 0px; text-align: center; mso-line-height-alt: 21px; " class="hoverLink1 m-text--link"><a href="#" target="_blank" style="color: #ef1b00; font-weight: 700; text-decoration: none; " name="LinkName_link" class=""><span style="border-bottom: 2px solid #ef1b00; " class="outlook-textDecoration--underline">Learn More</span></a></p>
                                                                 </th>
                                                             </tr>
                                                         </table>
@@ -952,7 +952,7 @@
                                                         <table class="m-float--center" width="" align="right" border="0" cellpadding="0" cellspacing="0" role="presentation" style="margin: 0px auto; float: right; ">
                                                             <tr>
                                                                 <th width="100%" align="center" border="0" style="padding: 0px; width: 100%; mso-line-height-rule: exactly" class="">
-                                                                    <p style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: 700; letter-spacing: normal; line-height: 1.5; margin: 0px; text-align: center; mso-line-height-alt: 21px; " class="hoverLink1 m-text--link"><a href="https://www.whereoware.com" target="_blank" style="color: #ef1b00; font-weight: 700; text-decoration: none; " name="LinkName_link" class=""><span style="border-bottom: 2px solid #ef1b00; " class="outlook-textDecoration--underline">Learn More</span></a></p>
+                                                                    <p style="font-family: 'Roboto', Arial, sans-serif; font-size: 14px; font-weight: 700; letter-spacing: normal; line-height: 1.5; margin: 0px; text-align: center; mso-line-height-alt: 21px; " class="hoverLink1 m-text--link"><a href="#" target="_blank" style="color: #ef1b00; font-weight: 700; text-decoration: none; " name="LinkName_link" class=""><span style="border-bottom: 2px solid #ef1b00; " class="outlook-textDecoration--underline">Learn More</span></a></p>
                                                                 </th>
                                                             </tr>
                                                         </table>
