--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
     <div class="fx-quarter fx-margin-top-20 fx-padding-bottom-100">
             <div class="">
-            <a style="text-decoration: none !important" href="https://felixzavala.com/ArasakaEmail.html" target="_blank"> <img src="http://felixzavala.com/img/NewsletterEmailPreview.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
+            <a style="text-decoration: none !important" href="https://felixzavala.com/HopeNewsletter.html" target="_blank"> <img src="http://felixzavala.com/img/NewsletterEmailPreview.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
             <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive - Dark Mode Email</div>
             </a>
             </div>
