--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="fx-content">
     <div>
         <h1 class="fx-font-64 fx-bold">Hola! My name is Felix.</h1>
-      <h3 class="fx-padding-bottom-48">I'm a technical expert specializing in the development of <strong>HTML emails</strong>, and various CMS platforms, including <strong>WordPress</strong>. Proficient in Adobe Creative Cloud applications, including Photoshop, I bring a graphic design background to my work.
+      <h3 class="fx-padding-bottom-48">I'm a technical expert specializing in the development of <strong>HTML emails</strong>, and various CMS platforms, including <strong>WordPress</strong>. Proficient in <strong>Adobe Creative Cloud</strong> applications, including Photoshop, I bring a graphic design background to my work.
 
       </h3>
     </div>
