--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 <body>
 
 <!-- Header -->
-<header class="fx-container fx-center " style="padding:128px 16px 0px 16px">
+<header class="fx-container fx-center fx-dm" style="padding:128px 16px 0px 16px">
 
 </header>
 
 <!-- Avatar -->
-<div class="fx-row-padding fx-container fx-center fx-padding-bottom-48" style="padding-bottom: 0px;">
+<div class="fx-row-padding fx-container fx-center fx-padding-bottom-48 fx-dm" style="padding-bottom: 0px;">
   <div class="fx-content">
     <div>
-      <img class="" src="/img/fx_headshot_avatar.png" alt="Avatar of Felix" width="228" height="auto">
+      <img class="" src="https://felixzavala.com/img/fx_headshot_avatar280X280.png" alt="Avatar of Felix" width="228" height="auto">
     </div>
 
  
@@ -36,33 +36,41 @@
 </div>
 
 <!-- Intro Paragraph-->
-<div class="fx-row-padding fx-container fx-center">
+<div class="fx-row-padding fx-container fx-center fx-dm">
   <div class="fx-content">
     <div>
         <h1 class="fx-font-64 fx-bold">Hola! My name is Felix.</h1>
-      <h3 class="fx-padding-bottom-48">I'm a technical expert specializing in the development of <strong>HTML emails</strong>, and various CMS platforms, including <strong>WordPress</strong>. Proficient in <strong>Adobe Creative Cloud</strong> applications, including Photoshop, I bring a graphic design background to my work.
+      <h3 class="fx-padding-bottom-48">I'm a technical expert specializing in the development of HTML emails and various CMS platforms, including WordPress. Proficient in Photoshop and other design software, I bring a touch of design flair to my work.
 
       </h3>
     </div>
   </div>
 </div>
 
+<!-- Example of Work -->
+<div class="fx-row-padding fx-padding-64 fx-container fx-center fx-padding-lr-100 fx-dm fx-padding-bottom-100">
+    <div class="fx-content">
+      <div>
+ 
 
-<hr>
+      </div>
+    </div>
+  </div>
+
 
 
 <!-- Example of Work -->
-<div class="fx-row-padding fx-padding-24 fx-container fx-center fx-padding-lr-100">
+<div class="fx-row-padding fx-padding-24 fx-container fx-center fx-padding-lr-100 fx-dm">
     <div class="fx-content">
       <div>
-        <h1><strong>PORTFOLIO</strong></h1>
+        <h1><strong>Digital Portfolio</strong></h1>
               <!-- Icon Divider-->
               <div class="divider-custom">
                 <div class="divider-custom-line"></div>
-                <div class="divider-custom-icon"><i class="fa fa-envelope"></i></div>
+                <div class="divider-custom-icon"><i class="fa fa-book fx-text-white"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-        <h3 class="fx-padding-bottom-24">Fully responsive emails that look great in over 90+ Email Service Providers.
+        <h3 class="fx-padding-bottom-24">These are some examples of fully responsive HTML emails that I created using custom snippets and templates that I developed. These emails have been tested through Litmus and look great in over 90 email service providers, including Microsoft Outlook.
 
         </h3>
 
@@ -71,12 +79,12 @@
   </div>
 
   <!-- START: First Row of My Work -->
-  <div class="fx-row-padding fx-padding-lr-200"> 
+  <div class="fx-row-padding fx-padding-lr-200 fx-dm"> 
 
     <div class="fx-quarter fx-margin-top-20 fx-padding-bottom-100 m-fx-padding-top">
         <div class="">
             <a style="text-decoration: none !important" href="https://felixzavala.com/emailtemp2.html" target="_blank"> <img src="http://felixzavala.com/img/GameStoreEmailPreview1.png" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
-            <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive Email</div>
+            <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive</div>
             </a>
         </div>
     </div>
@@ -85,7 +93,7 @@
     <div class="fx-quarter fx-margin-top-20  fx-padding-bottom-100">
             <div class="">
             <a style="text-decoration: none !important" href="https://felixzavala.com/HelpCo.html" target="_blank"> <img src="https://felixzavala.com/img/HelpCoPreview.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
-            <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive - Dark Mode Email</div>
+            <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive - Dark Mode</div>
             </a>
             </div>
     </div>
@@ -95,7 +103,7 @@
     <div class="fx-quarter fx-margin-top-20 fx-padding-bottom-100">
     <div class="">
         <a style="text-decoration: none !important" href="https://felixzavala.com/emailtemplate3.html" target="_blank"><img src="http://felixzavala.com/img/NeoTechEmailPreview.jpg" alt="2 Developers looking at a laptop screen with intent." style="width:100%" class="fx-hover-opacity ">
-  <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive Email</div>
+  <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive</div>
     </a>
       </div>
     </div>
@@ -105,7 +113,7 @@
     <div class="fx-quarter fx-margin-top-20">
     <div class="">
         <a style="text-decoration: none !important" href="http://felixzavala.com/healthtea.html" target="_blank"> <img src="http://felixzavala.com/img/HealthTeaEmailPreview.jpg" alt="Group of children signing to the camera." style="width:100%" class="fx-hover-opacity ">
-      <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive Email</div>
+      <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive</div>
      </a>
       </div>
     </div>
@@ -114,7 +122,7 @@
     
 <!-- END: First Row of My Work -->
   <!-- START: Second Row of My Work -->
-  <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-100"> 
+  <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-100 fx-dm"> 
 
     <div class="fx-quarter fx-padding-bottom-100 m-fx-padding-top">
         <div class="">
@@ -124,7 +132,7 @@
     <div class="fx-quarter fx-margin-top-20 fx-padding-bottom-100 m-fx-padding-top">
         <div class="">
             <a style="text-decoration: none !important" href="https://felixzavala.com/ArasakaEmail.html" target="_blank"> <img src="http://felixzavala.com/img/RetroEmail.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
-                <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive - Dark Mode Email</div>
+                <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive - Dark Mode</div>
             </a>
         </div>
     </div>
