--- a/index.html
+++ b/index.html
@@ -40,15 +40,37 @@
   <div class="fx-content">
     <div>
         <h1 class="fx-font-64 fx-bold">Hola! My name is Felix.</h1>
-      <h3 class="fx-padding-bottom-48">I'm a technical expert specializing in the development of HTML emails and various CMS platforms, including WordPress. Proficient in Photoshop and other design software, I bring a touch of design flair to my work.
+      <h3 class="fx-padding-bottom-100">I'm a technical expert specializing in the development of HTML emails and various CMS platforms, including WordPress. Proficient in Photoshop and other design software, I bring a touch of design flair to my work.
 
       </h3>
     </div>
   </div>
 </div>
 
-<!-- Example of Work -->
-<div class="fx-row-padding fx-padding-64 fx-container fx-center fx-padding-lr-100 fx-dm fx-padding-bottom-100">
+<!-- ## START: MODULE - Divider (horizontal full-width) ## -->
+<tr>
+    <!-- vertical spacing from prior module -->
+    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 15px; mso-line-height-rule: exactly;">
+        <table class="m-width--100p m-float--center fx-padding-64 fx-dm" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
+            <tr>
+                <!-- horizontal spacing/background color/border -->
+                <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
+                    <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto; float: none;">
+                        <tr>
+                            <!-- divider (horizontal) -->
+                            <th class="" width="100%" height="1" align="center" border="0" style="width: 100%; height: 1px; padding: 0px; mso-line-height-rule: exactly; font-size: 0px; mso-line-height-alt: 0px; line-height: 0; border-top: 1px solid #BEC3C7;">&nbsp;
+                            </th>
+                        </tr>
+                    </table>
+                </th>
+            </tr>
+        </table>
+    </th>
+</tr>
+<!-- ## END: MODULE - Divider (horizontal full-width) ## -->
+
+<!-- spacer -->
+<div class="fx-row-padding fx-padding-64 fx-container fx-center fx-padding-lr-100 fx-dm">
     <div class="fx-content">
       <div>
  
@@ -60,7 +82,7 @@
 
 
 <!-- Example of Work -->
-<div class="fx-row-padding fx-padding-24 fx-container fx-center fx-padding-lr-100 fx-dm">
+<div class="fx-row-padding fx-padding-24 fx-container fx-center fx-padding-lr-100 fx-dm fx-padding-bottom-100">
     <div class="fx-content">
       <div>
         <h1><strong>Digital Portfolio</strong></h1>
@@ -161,6 +183,15 @@
 
 
 
+<!-- spacer -->
+<div class="fx-row-padding fx-padding-64 fx-container fx-center fx-padding-lr-100 fx-dm fx-padding-bottom-100">
+    <div class="fx-content">
+      <div>
+ 
+
+      </div>
+    </div>
+  </div>
 
 
 
